tests/sema/golden/01_unknown_ident.out
tests/sema/bad/01_unknown_ident.sg:1:1: error: unknown variable 'x'
  x = 1;
  ^
